--- a/.gitignore
+++ b/.gitignore
@@ -46,7 +46,7 @@ artifacts/
 *_p.c
 *_i.h
 *.ilk
-*.meta
+#*.meta
 *.obj
 *.pch
 *.pdb
@@ -245,3 +245,4 @@ sysinfo.txt
 Icon?
 ehthumbs.db
 [Tt]humbs.db
+
