--- a/3D/New Unity Project 2/New Unity Project 2.CSharp.csproj
+++ b/3D/New Unity Project 2/New Unity Project 2.CSharp.csproj
@@ -12,7 +12,7 @@
     <ProjectTypeGuids>{E097FAD1-6243-4DAD-9C02-E9B9EFC3FFC1};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <TargetFrameworkIdentifier>.NETFramework</TargetFrameworkIdentifier>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
-    <TargetFrameworkProfile>Unity Subset v3.5</TargetFrameworkProfile>
+    <TargetFrameworkProfile>Unity Full v3.5</TargetFrameworkProfile>
     <CompilerResponseFile></CompilerResponseFile>
     <UnityProjectType>Game:1</UnityProjectType>
     <UnityBuildTarget>StandaloneWindows64:19</UnityBuildTarget>
@@ -51,11 +51,17 @@
     <Reference Include="UnityEngine">
       <HintPath>Library\UnityAssemblies\UnityEngine.dll</HintPath>
     </Reference>
+    <Reference Include="UnityEngine.Advertisements">
+      <HintPath>Library\UnityAssemblies\UnityEngine.Advertisements.dll</HintPath>
+    </Reference>
     <Reference Include="UnityEngine.UI">
       <HintPath>Library\UnityAssemblies\UnityEngine.UI.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.Networking">
       <HintPath>Library\UnityAssemblies\UnityEngine.Networking.dll</HintPath>
+    </Reference>
+    <Reference Include="UnityEngine.Analytics">
+      <HintPath>Library\UnityAssemblies\UnityEngine.Analytics.dll</HintPath>
     </Reference>
     <Reference Include="UnityEditor">
       <HintPath>Library\UnityAssemblies\UnityEditor.dll</HintPath>
@@ -68,13 +74,17 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\Main\Camera.cs" />
-    <Compile Include="Assets\Main\ConnMenu.cs" />
-    <Compile Include="Assets\Main\KeyInput.cs" />
-    <Compile Include="Assets\Main\Main.cs" />
-    <Compile Include="Assets\Main\Servo.cs" />
-    <Compile Include="Assets\Parameter\Arm_Parameter.cs" />
-    <Compile Include="Assets\Parameter\Gelenk_Parameter.cs" />
+    <Compile Include="Assets\Scripts\Main\Camera.cs" />
+    <Compile Include="Assets\Scripts\Main\ConnMenu.cs" />
+    <Compile Include="Assets\Scripts\Main\KeyInput.cs" />
+    <Compile Include="Assets\Scripts\Main\Main.cs" />
+    <Compile Include="Assets\Scripts\Port\COMPortSettings.cs" />
+    <Compile Include="Assets\Scripts\Port\InitDropDown.cs" />
+    <Compile Include="Assets\Scripts\Port\InitScrollRect.cs" />
+    <Compile Include="Assets\Scripts\Port\Schnittstelle.cs" />
+    <Compile Include="Assets\Scripts\Robot\Arm_Parameter.cs" />
+    <Compile Include="Assets\Scripts\Robot\Gelenk_Parameter.cs" />
+    <Compile Include="Assets\Scripts\Robot\Servo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\SyntaxTree\UnityVS\2015\UnityVS.CSharp.targets" />
 </Project>
